@@ -1,3 +1,8 @@
+2023-02-22  dyuret  <dyuret@login02.kuacc.ku.edu.tr>
+
+	* controller-coordinates: door, drawer, button, switch.
+
+
 2023-02-19  Deniz Yuret  <dyuret@WS001>
 
 	* scene_info.npy:
